[package]
name = "node"
version = "0.1.0"
authors = ["Tyler Morten"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "1.1"
actix-service = "1.0"
actix-cors = "0.5"
log = "0.4"
env_logger = "0.8"
diesel_migrations = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15"
failure = "0.1"
futures = "0.3"
derive_more = "0.99"

[dependencies.diesel]
version = "1.4.5"
features = ["sqlite", "r2d2", "chrono"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dev-dependencies.diesel]
version = "1.4.5"
features = ["sqlite", "r2d2", "chrono"]
